# JWKS-server

./: pyproject.toml
app/: keys.py  main.py  security.py
tests/: test_api.py
